Spacing fixes

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -45,7 +45,7 @@
     text-align: center; 
     padding: 50px; 
     margin: 50px 50px 20px 50px;
-    background: #58585;  
+    background: #7b7b66;  
 }
 
 p{
